🌱 jeorg-spring-flash-3-10 - 🎸 - JsonComponent